<resources>
    <string name="app_name">Care and Cure</string>

    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="registration">REGISTER</string>
    <string name="start">START</string>
    <string name="already_a_user">Already a user?</string>
    <string name="log_in">Log In</string>
    <string name="not_a_member">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="care_and_cure">Care and Cure</string>
    <string name="care_and_cure_desc">Ready to use Application? Swipe left to learn the basics of Application.</string>
    <string name="welcome_to_care_and_cure">Welcome to Care and Cure</string>
    <string name="patient">Patient Login</string>
    <string name="Hospital">Hospital Login</string>
    <string name="info_patient">
           \nLogin according to your field
        \n\n* PATIENT LOGIN Query
    \n\nLogin first and Patient can only see own data.
    \n\n* Hospital LOGIN Query
    \n\nRegister First If you have not part of Care and Cure for that goto hospital login button and register.
        Now you are part of care and cure. You are Admin And Handle all Data.
        \n\n* Doctor LOGIN Query
    \n\nDoctor can only see own data and update own data Doctor details will be only add by hospital admin staff.
         \n\nHere Hospital Admin is main to handle all of details.Hospital can add doctor details, patient details etc..

    </string>
    <string name="work_in_progress">Work In Progress..</string>
    <string name="DoctorLogin">Doctor Login</string>
    <string name="todo">TODO</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_image">Add Image</string>
    <string name="REGISTRATION">REGISTRATION</string>
    <string name="hospital">HOSPITAL</string>
    <string name="certificate">CERTIFICATE</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="OTP_desc">We will send you an one time otp on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the otp?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the OTP sent to you</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="more">More</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="dot">:-</string>
    <string name="xxxxxxxx_yyyyyy_zzzzzz">xxxx yyyy zzzz</string>
    <string name="_1234567890">1234567890</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="blood_group">Blood Group</string>
    <string name="o">o+</string>
    <string name="age">Age</string>
    <string name="_20">12</string>
    <string name="relative_name">Relative Name</string>
    <string name="relative_mobile">Relative Mobile</string>
    <string name="relation">Relation</string>
    <string name="xxxxxx">xxyyzz</string>
    <string name="disease">Disease</string>
    <string name="admit_date">Admit Date</string>
    <string name="rupees">₹</string>
    <string name="_1234">1234</string>
    <string name="ward_no">Ward No</string>
    <string name="_123">123</string>
    <string name="weight">Weight</string>
    <string name="k_g">K.G</string>
    <string name="height">Height</string>
    <string name="centimeter">CentiMeter</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="enter_money">Enter Money</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="payment_status">Payment Status</string>
    <string name="compeleted">Compeleted</string>
    <string name="makepayment">Make Payment With Easy Way</string>
    <string name="paymentdesc">Your Payment On Way…</string>
    <string name="specialist">Specialist</string>
    <string name="qualification">Qualification</string>
    <string name="patient_details">Patient Details</string>
    <string name="staff_details">Staff Details</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate_us</string>
    <string name="delete_account">Delete Account</string>
    <string name="blank" />
    <string name="other">Other</string>
    <string name="staff">Staff</string>
    <string name="Patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="welcome">Welcome,</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_mobile_no">Patient Mobile No.</string>
    <string name="upi_id">UPI ID</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="update">UPDATE</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_mobile_no">Doctor Mobile No.</string>
    <string name="dcotor_name">Dcotor Name</string>
    <string name="no">No.</string>
    <string name="patient_image">Patient Image</string>
    <string name="submit">SUBMIT</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="nurshing">Nurse</string>
    <string name="lab">Lab</string>
    <string name="ward_boy">Ward Boy</string>
    <string name="reception">Reception</string>
    <string name="cleaning">Cleaning Staff</string>
    <string name="medical">Medical</string>
    <string name="rmo">RMO</string>
    <string name="ot_staff">OT Staff</string>
    <string name="identity_no">Identity No.</string>
    <string name="name">Name</string>
    <string name="field">Field</string>
    <string name="nurseimage">Nurse Image</string>
    <string name="assistant">Assistant</string>
    <string name="assitantimage">Assistant Image</string>
    <string name="image">Image</string>
    <string name="labimage">Lab Image</string>
    <string name="medicalimage">Medical Image</string>
    <string name="otstaffimage">OTstaff Image</string>
    <string name="wardboyimage">Wardboy Image</string>
    <string name="rmoimage">RMO Image</string>
    <string name="receptionimage">Reception Image</string>
    <string name="bill">Bill</string>
    <string name="totalamount">Total Amount</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="secondslide">1 :- This is info box here you know how to work login section.
    \n2 :- This is Patient side login activity.
    \n3 :- This is Doctor side login activity.
    \n4 :- This is Hospital side login activity.</string>
    <string name="thirdslide">This App is Powered by GYV Tech.</string>
    <string name="fourthslide">
    GYV has worried about admin and user privacy.
    So forget privacy related issues and use smooth and excellent app.</string>

</resources>