<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HospitalHome">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu_header"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="@dimen/_31sdp"
                android:layout_height="@dimen/_31sdp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_clear_all_24" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="@dimen/_31sdp"
                android:layout_height="@dimen/_31sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_8sdp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/profile" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/HospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:text="@string/hospital_name"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/cardview"
                android:elevation="@dimen/_6sdp">

                <TextView
                    android:id="@+id/staff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/andada"
                    android:gravity="center"
                    android:text="@string/staff"
                    android:textColor="#AD000000"
                    android:textSize="@dimen/_25sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/cardview"
                android:elevation="@dimen/_6sdp">

                <TextView
                    android:id="@+id/patient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/andada"
                    android:gravity="center"
                    android:text="@string/Patient"
                    android:textColor="#AD000000"
                    android:textSize="@dimen/_25sdp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/cardview"
                android:elevation="@dimen/_6sdp"
                tools:ignore="VisualLintBounds">

                <TextView
                    android:id="@+id/doctor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/andada"
                    android:gravity="center"
                    android:text="@string/doctor"
                    android:textColor="#AD000000"
                    android:textSize="@dimen/_25sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/cardview"
                android:elevation="@dimen/_6sdp"
                tools:ignore="VisualLintBounds">

                <TextView
                    android:id="@+id/bill"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/andada"
                    android:gravity="center"
                    android:text="@string/bill"
                    android:textColor="#AD000000"
                    android:textSize="@dimen/_25sdp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>



