<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReceptionHome_1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lightblue"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/arrowback"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/arrow_back"
            tools:ignore="ContentDescription,RtlHardcoded" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#11070707"
                android:hint="@string/full_name"
                app:boxStrokeColor="#63FF5722"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ReceptionName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColorHint="#757575"
                    tools:ignore="DuplicateIds,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#11070707"
                android:hint="@string/mobile_no"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ReceptionMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColorHint="#757575"
                    tools:ignore="DuplicateIds,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#11070707"
                android:hint="@string/gender"
                app:boxStrokeColor="#5E00FF0A"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ReceptionGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/gender"
                    android:drawablePadding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColorHint="#757575"
                    tools:ignore="DuplicateIds,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#11070707"
                android:hint="@string/age"
                app:boxStrokeColor="#63FF5722"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ReceptionAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/age"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="#757575"
                    tools:ignore="DuplicateIds,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#11070707"
                android:hint="@string/aadhar_number"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ReceptionAadhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="number"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textColorHint="#757575"
                    tools:ignore="DuplicateIds,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#11070707"
                android:hint="@string/address"
                app:boxStrokeColor="#5E00FF0A"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ReceptionAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/home"
                    android:drawablePadding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColorHint="#757575"
                    tools:ignore="DuplicateIds,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#11070707"
                android:hint="@string/field"
                app:boxStrokeColor="#63FF5722"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ReceptionField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/specialist"
                    android:drawablePadding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColorHint="#757575"
                    tools:ignore="DuplicateIds,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="#11070707"
                    android:text="@string/add_image"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintOverlap" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_240sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/error_outline" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/add_photos"
                    android:text="@string/receptionimage"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ReceptionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/input_bg"
                android:backgroundTint="#6FC6EEFD"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/submit"
                tools:ignore="VisualLintButtonSize" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>