<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragPatientPayment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/gif"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/hospitallogin"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gif"
            android:gravity="center"
            android:text="@string/makepayment"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/paymentdesc"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/shape"
            android:elevation="@dimen/_16sdp"
            android:padding="@dimen/_8sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/enter_money"
                app:boxStrokeColor="#A400FF0A"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_currency_rupee_24"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="20sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/paymentbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputtext"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/input_bg"
                android:text="MAKE PAYMENT"
                tools:ignore="HardcodedText,VisualLintButtonSize,VisualLintBounds" />


        </RelativeLayout>

    </RelativeLayout>


</FrameLayout>